    and the error message will be printed on the console.  Previously, this
    error message would not have been visible.  Closes: #185709.
  * Fixed a silly error relating to handling of the remotepassfile.
    Closes: #189935.
  * Made OfflineIMAP IPv6-aware.  Used the short patch from
    Adriaan Peeters <apeeters@lashout.net> in Debian bug report 186636.
    Closes: #186636.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 28 Apr 2003 14:00:32 -0500

offlineimap (3.99.14) unstable; urgency=low

  * Added the ability to use the top level of a Maildir as folder named
    ".".  Useful for generating Maildir trees for a Courier server.
  * Fixed the regular expression that fixes line endings to make sure to
    deal with \n\n properly.
  * Slight renaming in offlineimap.conf.minimal to clarify things.
  * Documentation updated with information about new features.
    Closes: #189771.
    + Described IMAP-IMAP syncing
    + Updated minimal example with new offlineimap.conf.minimal
    + Updated UID information.  Added link to recent mailing list
      discussion.
    + Described KMail syncing, which now works.
    + Added link to mailing list archives.

 -- John Goerzen <jgoerzen@complete.org>  Mon, 28 Apr 2003 07:13:23 -0500

offlineimap (3.99.13) unstable; urgency=low

  * Fixed password prompting for non-Curses UIs.
  * Fixed line-ending code to deal with files with mixed \n and \r\n
    codes.  This is a rare case, but now is more onerous because we now
    have to find headers.
  * Now checks that SELECT succeeded when entering a folder.
  * Verifies that folders listed on folderincludes actually exist by trying
    to enter them.  Thus, if they do not exist, they can be created on the
    first run.

 -- John Goerzen <jgoerzen@complete.org>  Thu, 17 Apr 2003 18:02:13 -0500

offlineimap (3.99.12) unstable; urgency=low

  * This is a 4.0 TRACK release, and may be unstable or in flux!
  * Big news: OfflineIMAP can now sync two remote IMAP servers to each