@@ -160,7 +160,8 @@ remoterepository = RemoteExample
 
 # You can have offlineimap continue running indefinately, automatically
 # syncing your mail periodically.  If you want that, specify how
-# frequently to do that (in minutes) here.
+# frequently to do that (in minutes) here.  You can also specify
+# fractional minutes (ie, 3.25).
 
 # autorefresh = 5
 
